Made an attempt of a solution to fix caret alignment on some Select

--- a/src/modules/core/components/MembersList/SortingRow/SortingRow.css
+++ b/src/modules/core/components/MembersList/SortingRow/SortingRow.css
@@ -7,7 +7,6 @@
 
 .sortingButton {
   display: flex;
-  align-items: center;
   padding: 0;
   border: none;
   background-color: transparent;
@@ -17,11 +16,10 @@
 }
 
 .sortingIcon {
+  align-self: center;
   margin-left: 8px;
   height: 10px;
   width: 10px;
-  position: relative;
-  top: 1px;
   fill: var(--temp-grey-blue-7);
 }
 
